--- a/jumpstart/templates/jumpstart/helper-jumpstart.html
+++ b/jumpstart/templates/jumpstart/helper-jumpstart.html
@@ -58,7 +58,7 @@
       <a href="{% url 'jumpstart:profile' %}" title="Edit Your Profile">Edit Your Profile</a>
       {% else %}
       <small class="text-muted d-block">
-        Your profile is visible to freshers in your group for City Challenge and ECSS committee.
+        Your profile is visible to members in your group and ECSS committee.
       </small>
       {% endif %}
     </div>
