--- a/jumpstart/templates/jumpstart/fresher-profile-edit.html
+++ b/jumpstart/templates/jumpstart/fresher-profile-edit.html
@@ -9,12 +9,7 @@
     Edit Your Profile
   </div>
   <div class="card-body">
-    <form method="post" enctype="multipart/form-data">
-      {% if helper.photo %}
-      <img class="d-block mb-3 img-fluid helper-photo" src="{{ helper.photo.url }}" alt="Helper for group {{ helper.group.number }}: {{ helper.name }}">
-      {% else %}
-      <span class="text-danger">Profile photo not uploaded.</span>
-      {% endif %}
+    <form method="post">
       {% csrf_token %}
       {% for field in profile_edit_form %}
       <div class="form-group">
@@ -28,8 +23,7 @@
       {% endfor %}
       <input type="submit" class="btn btn-ecssweb" value="Update">
       <div class="card-text my-2">
-        <small class="text-muted d-block">When you update your photo, the old file will not be immediately removed from the server. It will need to be removed manually by us.<br>
-        Your profile is visible to members in your group and ECSS committee.</small>
+        <small class="text-muted d-block">Your profile is visible to your group helper, members in your group and ECSS committee.</small>
       </div>
     </form>
   </div>
