--- a/website/static/website/styles/base.css
+++ b/website/static/website/styles/base.css
@@ -75,13 +75,13 @@ section {
   border-color: #d82129;
 }
 
-.btn-ecssweb-light {
+.btn-outline-ecssweb {
   color: darkred;
   background-color: white;
   border-color: darkred;
 }
 
-.btn-ecssweb-light:hover {
+.btn-outline-ecssweb:hover {
   color: #d82129;
   background-color: white;
   border-color: #d82129;
