--- a/jumpstart/templates/jumpstart/helper-group.html
+++ b/jumpstart/templates/jumpstart/helper-group.html
@@ -1,5 +1,7 @@
 {% extends 'jumpstart/base.html' %}
 
+{% load jumpstart_extra %}
+
 {% block jumpstartcontent %}
 <div class="mb-3">
   <a href="{% url 'jumpstart:home' %}" title="Jumpstart Portal"><i class="fas fa-arrow-circle-left"></i> Jumpstart portal</a>
