Update Jumpstart committee groups admin page

--- a/jumpstart/templates/jumpstart/committee-groups.html
+++ b/jumpstart/templates/jumpstart/committee-groups.html
@@ -34,6 +34,9 @@
       <li>
         <a href="/admin/jumpstart/helper/" title="ECSSWEB Jumpstart Helpers Admin">ECSSWEB Jumpstart Helpers Admin</a>
       </li>
+      <li>
+        <a href="/admin/jumpstart/fresher/" title="ECSSWEB Jumpstart Freshers Admin">ECSSWEB Jumpstart Freshers Admin</a>
+      </li>
     </ul>
   </div>
 </div>
