--- a/jumpstart/templates/jumpstart/fresher-profile.html
+++ b/jumpstart/templates/jumpstart/fresher-profile.html
@@ -12,7 +12,7 @@
     <div class="card-text">
       <ul>
         <li>Name: {{ fresher.name }}</li>
-        <li>Prefered Name: {% if fresher.prefered_name %}{{ fresher.prefered_name }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
+        <li>Preferred Name: {% if fresher.preferred_name %}{{ fresher.preferred_name }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
       </ul>
       <small class="text-muted d-block">Your profile is visible to your group helper, members in your group and ECSS committee.</small>
     </div>
