--- a/jumpstart/templates/jumpstart/helper-profile.html
+++ b/jumpstart/templates/jumpstart/helper-profile.html
@@ -17,7 +17,7 @@
       {% endif %}
       <ul>
         <li>Name: {{ helper.name }}</li>
-        <li>Prefered Name: {% if helper.prefered_name %}{{ helper.prefered_name }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
+        <li>Preferred Name: {% if helper.preferred_name %}{{ helper.preferred_name }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
       </ul>
       <small class="text-muted d-block">
         Your profile is visible to freshers in your group for City Challenge and ECSS committee.
