--- a/jumpstart/templates/jumpstart/helper-jumpstart.html
+++ b/jumpstart/templates/jumpstart/helper-jumpstart.html
@@ -67,13 +67,13 @@
 </div>
 <div class="card my-3">
   <div class="card-header">
-    <a href="#">City Challenge</a>
+    <a href="{% url 'jumpstart:city-challenge' %}">City Challenge</a>
   </div>
   <div class="card-body">
     <div class="card-text">
       <ul>
         <li>
-          Group name: {% if helper.group.name %}{{ helper.group.name }}{% else %}<span class="text-muted">Not set</span>{% endif %}
+          Group name: {% if helper.group.name %}{{ helper.group.name }}{% else %}<span class="text-danger">Not set</span>{% endif %}
         </li>
         <li>
           {% if helper.group.charityshopchallengesubmission_set.all %}
@@ -83,12 +83,10 @@
           {% endif %}
         </li>
       </ul>
-      {% if jumpstart.is_before %}
-      <small class="d-block text-muted"></small>
-      {% elif jumpstart.is_now %}
-      <a href="{% url 'jumpstart:city-challenge-edit' %}" title="Edit City Challenge for Your Group">Edit City Challenge</a>
+      {% if jumpstart.is_now %}
+      <a href="{% url 'jumpstart:city-challenge' %}" title="Submit to City Challenge for Your Group">Submit to City Challenge</a>
       {% else %}
-      <a href="#" title="View City Challenge of Your Group">View City Challenge</a>
+      <a href="{% url 'jumpstart:city-challenge' %}" title="View City Challenge of Your Group">View City Challenge</a>
       {% endif %}
     </div>
   </div>
@@ -109,10 +107,10 @@
       {% endif %}
     </div>
     <!-- <div class="my-3">
-      <a href="{% url 'jumpstart:scavenger-hunt-edit' %}">Submit Scavenger Hunt</a>
+      <a href="#">Submit Scavenger Hunt</a>
     </div>
     <div class="mt-3">
-        <a href="{% url 'jumpstart:scavenger-hunt' %}">View Scavenger Hunt</a>
+        <a href="#">View Scavenger Hunt</a>
     </div> -->
   </div>
 </div>
