--- a/jumpstart/templates/jumpstart/helper-city-challenge-edit.html
+++ b/jumpstart/templates/jumpstart/helper-city-challenge-edit.html
@@ -4,6 +4,12 @@
 <div class="mb-3">
   <a href="{% url 'jumpstart:home' %}" title="Jumpstart Portal"><i class="fas fa-arrow-circle-left"></i> Jumpstart portal</a>
 </div>
+{% for message in messages %}
+<div class="alert
+{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}alert-success{% endif %}
+{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}alert-danger{% endif %}
+">{{ message }}</div>
+{% endfor %}
 <div class="card my-3">
   <div class="card-header">
     City Challenge
@@ -24,7 +30,7 @@
     Edit Group Name
   </div>
   <div class="card-body">
-    <form method="post">
+    <form method="post" action="{% url 'jumpstart:group-name-update' %}">
       {% csrf_token %}
       {% for field in edit_group_name_form %}
       <div class="form-group">
@@ -38,10 +44,9 @@
       {% endfor %}
       <input type="Submit" class="btn btn-ecssweb" value="Update">
       <div class="mt-2">
-        <small class="text-muted">Your group name will be visible to ECSS committee, City Challenge helpers and all freshers participating in City Challenge. Your other submissions will be visible to your group members and ECSS committee members.</small>
-      </div>
-      <div class="mt-2">
-        <small class="text-muted">Your submissions might be used for other part of the Jumpstart event.</small>
+        <small class="text-muted">
+          Your group name is visible to all freshers participating in City Challenge, all helpers and ECSS committee.
+        </small>
       </div>
     </form>
   </div>
@@ -52,6 +57,7 @@
   </div>
   <div class="card-body">
     <form method="post" enctype="multipart/form-data">
+      <p>You can use this form multiple times to provide more details of your submission. If you would like to submit files not supported by this form, you can use services such as <a href="https://safesend.soton.ac.uk/" title="University of Southampton SafeSend service">the university's SafeSend</a> and submit details with the description field below. Or you can <a href="mailto:society@ecs.soton.ac.uk?subject=[Jumpstart 2019 Submission] Charity Shop Challenge Group {{ group.number }}">send emails to society@ecs.soton.ac.uk</a> with "[Jumpstart 2019 Submission] Charity Shop Challenge Group {{ group.number }}" as the subject and and submit details with the description field below.</p>
       {% csrf_token %}
       {% for field in submit_charity_shop_challenge %}
       <div class="form-group">
@@ -65,10 +71,14 @@
       {% endfor %}
       <input type="Submit" class="btn btn-ecssweb" value="Submit">
       <div class="mt-2">
-        <small class="text-muted">Your group name will be visible to ECSS committee, City Challenge helpers and all freshers participating in City Challenge. Your other submissions will be visible to your group members and ECSS committee members.</small>
+        <small class="d-block text-muted">
+          Your submissions will be visible to your group members and ECSS committee.
+        </small>
       </div>
       <div class="mt-2">
-        <small class="text-muted">Your submissions might be used for other part of the Jumpstart event.</small>
+        <small class="text-muted">
+          Your submissions might be used for other part of the Jumpstart event or future Jumpstart events.
+        </small>
       </div>
     </form>
   </div>
