--- a/jumpstart/templates/jumpstart/fresher-jumpstart.html
+++ b/jumpstart/templates/jumpstart/fresher-jumpstart.html
@@ -71,25 +71,25 @@
 </div>
 <div class="card mt-3">
   <div class="card-header">
-    City Challenge
+    <a href="{% url 'jumpstart:city-challenge' %}">City Challenge</a>
   </div>
   <div class="card-body">
     <div class="card-text">
-      This section is to complete by your group during the event.
       <ul>
         <li>
           Group name: {% if fresher.group.name %}{{ fresher.group.name }}{% else %}<span class="text-muted">Not set</span>{% endif %}
         </li>
         <li>
-            Charity Shop Challenge photo:
-            {% if fresher.group.charity_shop_challenge_photo %}
-            <img class="img-fluid d-block city-challenge-photo" src="{{ fresher.group.charity_shop_challenge_photo.url }}" alt="Charity Shop Challenge">
-            {% else %}
-            <span class="text-muted">Not submitted</span>
-            {% endif %}
-          </li>
-        </ul>
+          {% if fresher.group.charityshopchallengesubmission_set.all %}
+          <span class="text-success">Charity Shop Challenge submitted.</span>
+          {% else %}
+          <span class="text-danger">Charity Shop Challenge not submitted.</span>
+          {% endif %}
+        </li>
       </ul>
+      {% if jumpstart.is_now or jumpstart.is_after %}
+      <a href="{% url 'jumpstart:city-challenge' %}" title="View City Challenge of Your Group">View City Challenge</a>
+      {% endif %}
     </div>
   </div>
 </div>
@@ -102,7 +102,7 @@
       Submitted {{ group.scavengerhunt_set.all|length }} photo{{ group.scavengerhunt_set.all|length|pluralize }}.
     </div>
     <div class="mt-3">
-        <a href="{% url 'jumpstart:scavenger-hunt' %}">View Scavenger Hunt</a>
+        <a href="#">View Scavenger Hunt</a>
     </div>
   </div>
 </div>
