--- a/jumpstart/templates/jumpstart/helper-scavenger-hunt-task.html
+++ b/jumpstart/templates/jumpstart/helper-scavenger-hunt-task.html
@@ -31,7 +31,7 @@
         {% if task.hint and jumpstart.is_now %}
         <form method="POST" onsubmit="return confirm('Are you sure you want to reveal the hint? (this will deduct 10 points from this task)');">
           {% csrf_token %}
-          <input type="hidden" name="task" value="{{ task.id }}">
+          <input type="hidden" name="action" value="reveal_hint">
           <input type="submit" value="Reveal Hint (this will deduct 10 points from this task)" class="btn btn-ecssweb">
         </form>
         {% endif %}
@@ -65,6 +65,7 @@
   </div>
   <div class="card-body">
     <form method="POST">
+      <input type="hidden" name="action" value="submit_scavenger_hunt">
       <p>You can use this form multiple times to provide more details of your submission. If you would like to submit files not supported by this form, you can use services such as <a href="https://safesend.soton.ac.uk/" title="University of Southampton SafeSend service">the university's SafeSend</a> and submit details with the description field below. Or you can <a href="mailto:society@ecs.soton.ac.uk?subject=[Jumpstart 2019 Submission] Scavenger Hunt {{ task.id }} Group {{ group.number }}">send emails to society@ecs.soton.ac.uk</a> with "[Jumpstart 2019 Submission] Scavenger Hunt {{ task.id }} Group {{ group.number }}" as the subject and and submit details with the description field below.</p>
       {% if submit_scavenger_hunt_form.non_field_errors %}
       <div class="text-danger">
