Quick add committee view city challenge

--- a/jumpstart/templates/jumpstart/committee-jumpstart.html
+++ b/jumpstart/templates/jumpstart/committee-jumpstart.html
@@ -7,6 +7,9 @@
       <a href="{% url 'jumpstart:groups' %}" title="Groups and Helpers">Groups and Helpers</a>
     </li>
     <li>
+      <a href="{% url 'jumpstart:committee-challenges' %}" title="Challenges">Challenges</a>
+    </li>
+    <li>
       <a href="/admin/jumpstart/" title="ECSSWEB Jumpstart Administration">ECSSWEB Jumpstart Admin</a>
     </li>
   </ul>
